fix: notification overflow fix

--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -2,4 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css');
+@import url("https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css");
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+.animate-fade-in {
+  animation: fadeIn 0.4s;
+}
